# pimsync

./: .gitignore  Cargo.toml  README.org  flake.nix
src/: cli.rs  main.rs  piped_api.rs
src/players/: baseplayer.rs  mod.rs  vimusic.rs
