[package]
name = "pimsync"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.18", features = ["derive"] }
futures-lite = "2.2.0"
reqwest = { version = "0.11.23", features = ["blocking", "json"] }
serde = { version = "1.0.195", features = ["derive"] }
sqlx = { version = "0.7.3", features = ["sqlite", "runtime-async-std"] }
